tests/errors/assign-check/missing-large.expect
---CODE---
1
---STDERR---
error: bundle `a' has 99 unassigned locations
  ┌─ tests/errors/assign-check/missing-large.fil:2:12
  │
2 │     bundle a[100]: for<k> ['G, 'G+1] 32;
  │            ^ bundle indices are unassigned: 1, 2, 3, 4, 5, ... and 94 others

Compilation failed with 1 errors.
Run with --show-models to generate assignments for failing constraints.
